# cs107-FinalProject

./:  milestone1.ipynb  .travis.yml  README.md  codecov.yml  config.sh  test.cpp
3PL/: build_3PL.sh
3PL/eigen-3.3.9/_build/: CMakeCache.txt  DartConfiguration.tcl  cdashtesting.cmake  eigen3.pc
3PL/eigen-3.3.9/_build/doc/: Doxyfile  Doxyfile-unsupported
3PL/eigen-3.3.9/_build/language_tests/Fortran/: CMakeCache.txt  Makefile  cmake_install.cmake
3PL/lcov/: Makefile
3PL/lcov/tests/: full.counts  part1.counts  part2.counts  target.counts  test.counts  zero.counts
3PL/lcov/tests/genhtml/out_full/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
3PL/lcov/tests/genhtml/out_full/www/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  list.c.func-sort-c.html  list.c.func.html  list.c.gcov.html
3PL/lcov/tests/genhtml/out_part1/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
3PL/lcov/tests/genhtml/out_part2/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
3PL/lcov/tests/genhtml/out_target/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
3PL/lcov/tests/genhtml/out_zero/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
3PL/lcov/tests/lcov/diff/: diff  patched_normalized.info-e
App/: CMakeLists.txt  Makefile  bin  config.sh  demo.cpp
App/src/: CMakeLists.txt  main.cpp
App/tests/: CMakeLists.txt  test_main.cpp
App/tests/src/: CMakeLists.txt  test_app.cpp  test_vars.h
AutoDiff/: CMakeLists.txt  config.sh  coverage.sh  diff.cpp
AutoDiff/core/: CMakeLists.txt
AutoDiff/core/src/: ADFunc.cpp  ADFuncVector.cpp  AutoDiff.cpp  CMakeLists.txt  Dual.cpp  MyAwesomeLibrary.cpp
AutoDiff/core/tests/: CMakeLists.txt  test_AD.cpp  test_main.cpp
AutoDiff/core/tests/src/: CMakeLists.txt  dual_test1.cpp  test_AD.cpp  test_ADFV_unit.cpp  test_ADF_names.cpp  test_ADF_nested.cpp  test_ADF_unit.cpp  test_vars.h
AutoDiff/include/: ADFunc.h  ADFuncVector.h  AutoDiff.h  CMakeLists.txt  MyAwesomeLibrary.hpp  dual.h  test_main.cpp
AutoDiff/install/lib/: libAutoDiff.dylib
AutoDiff/src/: diff.cpp  dual.cpp
Dual/: CMakeLists.txt  config.sh  coverage.sh
Dual/core/src/: CMakeLists.txt  Dual.cpp
Dual/core/tests/: CMakeLists.txt  test_main.cpp
Dual/core/tests/src/: CMakeLists.txt  test_DUAL.cpp  test_vars.h
Dual/coverage/: AWESOME_COV.info
Dual/coverage/CODE_COVERAGE/: index-sort-f.html  index-sort-l.html  index.html
Dual/coverage/CODE_COVERAGE/Users/wenlingong/Documents/GitHub/Classes/cs107/cs107-FinalProject/Dual/core/src/: Dual.cpp.func-sort-c.html  Dual.cpp.func.html  Dual.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Dual/coverage/CODE_COVERAGE/v1/: __nullptr.func-sort-c.html  __nullptr.func.html  __nullptr.gcov.html  __string.func-sort-c.html  __string.func.html  __string.gcov.html  algorithm.func-sort-c.html  algorithm.func.html  algorithm.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ios.func-sort-c.html  ios.func.html  ios.gcov.html  iosfwd.func-sort-c.html  iosfwd.func.html  iosfwd.gcov.html  istream.func-sort-c.html  istream.func.html  istream.gcov.html  iterator.func-sort-c.html  iterator.func.html  iterator.gcov.html  memory.func-sort-c.html  memory.func.html  memory.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  ostream.func-sort-c.html  ostream.func.html  ostream.gcov.html  sstream.func-sort-c.html  sstream.func.html  sstream.gcov.html  stdexcept.func-sort-c.html  stdexcept.func.html  stdexcept.gcov.html  streambuf.func-sort-c.html  (+8 more)
Dual/include/: Dual.h
Dual/install/include/: Dual.h
Dual/install/lib/: libDual.dylib
Example/: Makefile  example  example.cpp
Roots/: CMakeLists.txt  config.sh  coverage.sh
Roots/core/: CMakeLists.txt
Roots/core/src/: CMakeLists.txt  Roots.cpp
Roots/core/tests/: CMakeLists.txt  test_main.cpp
Roots/core/tests/src/: CMakeLists.txt  test_ROOTS.cpp  test_vars.h
Roots/coverage/CODE_COVERAGE/: index-sort-f.html  index-sort-l.html  index.html
Roots/coverage/CODE_COVERAGE/src/: Dual.cpp.func-sort-c.html  Dual.cpp.func.html  Dual.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Roots/include/: Roots.h
docs/: Doxyfile.config  README.md  User's Guide.ipynb  documentation.ipynb  final-milestone.ipynb  milestone1.ipynb  milestone1.md  milestone2.ipynb  milestone2_progress.ipynb
docs/GENERATED_DOCS/html/: ADFuncVector_8h.html  ADFuncVector_8h__dep__incl.map  ADFuncVector_8h__dep__incl.md5  ADFuncVector_8h__incl.map  ADFuncVector_8h__incl.md5  ADFuncVector_8h_source.html  ADFunc_8h.html  ADFunc_8h__dep__incl.map  ADFunc_8h__dep__incl.md5  ADFunc_8h__incl.map  ADFunc_8h__incl.md5  ADFunc_8h_source.html  Roots_8h.html  Roots_8h__incl.map  Roots_8h__incl.md5  Roots_8h_source.html  annotated.html  classADFunc.html  classADFuncVector.html  classEquation.html  classes.html  dir_000003_000000.html  dir_003ab760f2568ab3b4a5db03dfed1597.html  dir_003ab760f2568ab3b4a5db03dfed1597_dep.map  dir_003ab760f2568ab3b4a5db03dfed1597_dep.md5  dir_02b4e1accdd8361806ec7fb7cdae322e.html  dir_0a5b27198e593a7430f1114e2175dfbd.html  dir_0a5b27198e593a7430f1114e2175dfbd_dep.map  dir_0a5b27198e593a7430f1114e2175dfbd_dep.md5  dir_7d8df539df14f3a3532d514460eace5b.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  group__ADFunc__group.html  group__AutoDiff__group.html  group__Roots__group.html  (+5 more)
docs/GENERATED_DOCS/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js  variables_0.js  (+1 more)
docs/dairies/: 10_18_2020.md  11_20_2020.md
(+65 files in other folders)
